implement fetch outbound buffer
